client/kubernetes/30-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: covid-19-selfcheck-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - covid-19-selfcheck.emmanuelnyachoke.com
    secretName: covid-19-selfcheck-tls
  rules:
  - host: covid-19-selfcheck.emmanuelnyachoke.com
    http:
      paths:
      - path: /
        backend:
          serviceName: covid-19-selfcheck
          servicePort: 80
